package com.aamo.cookbook.model

data class RecipeCategory(
  val name: String
){

}