...
      }
    }
  }

  @Composable
  fun CompletedPage() {
    PageBase(title = "Valmis!")
  }

  @Composable
  fun ChapterPage(
    chapter: Recipe.Chapter,
    chapterNumber: Int,
...
